--- a/index.html
+++ b/index.html
@@ -3,48 +3,121 @@
 <head>
   <meta charset="UTF-8" />
   <title>Time Value Awareness</title>
+
   <style>
+    :root {
+      --bg: #0f1115;
+      --card: #151922;
+      --text: #e6e6e6;
+      --muted: #9aa0aa;
+      --accent: #4f8cff;
+      --border: rgba(255, 255, 255, 0.08);
+    }
+
+    [data-theme="light"] {
+      --bg: #f5f7fb;
+      --card: #ffffff;
+      --text: #1a1a1a;
+      --muted: #5f6368;
+      --accent: #2563eb;
+      --border: rgba(0, 0, 0, 0.08);
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      padding: 16px;
-      background: #0f1115;
-      color: #e6e6e6;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: var(--bg);
+      color: var(--text);
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      transition: background 0.3s ease, color 0.3s ease;
     }
 
     .container {
-      max-width: 320px;
+      width: 100%;
+      max-width: 360px;
+      background: var(--card);
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
+      border: 1px solid var(--border);
+      transition: background 0.3s ease, border 0.3s ease;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 16px;
     }
 
     .title {
       font-size: 14px;
-      font-weight: 500;
-      opacity: 0.75;
-      margin-bottom: 12px;
+      font-weight: 600;
+      letter-spacing: 0.2px;
+      color: var(--muted);
+      text-transform: uppercase;
+    }
+
+    .toggle {
+      border: none;
+      background: transparent;
+      cursor: pointer;
+      font-size: 14px;
+      color: var(--accent);
+      padding: 6px 10px;
+      border-radius: 8px;
+      transition: background 0.2s ease;
+    }
+
+    .toggle:hover {
+      background: rgba(79, 140, 255, 0.12);
     }
 
     .row {
       display: flex;
       justify-content: space-between;
-      padding: 4px 0;
-      font-size: 13px;
-      line-height: 1.4;
+      align-items: center;
+      padding: 8px 0;
+      font-size: 14px;
+      border-bottom: 1px dashed var(--border);
+    }
+
+    .row:last-child {
+      border-bottom: none;
     }
 
     .label {
-      opacity: 0.6;
+      color: var(--muted);
     }
 
     .value {
       font-variant-numeric: tabular-nums;
-      opacity: 0.9;
+      font-weight: 500;
+      color: var(--text);
+    }
+
+    .footer {
+      margin-top: 14px;
+      font-size: 11px;
+      color: var(--muted);
+      text-align: center;
     }
   </style>
 </head>
 
-<body>
+<body data-theme="dark">
   <div class="container">
-    <div class="title">Current Time Value</div>
+    <div class="header">
+      <div class="title">Current Time Value</div>
+      <button class="toggle" id="themeToggle">Light</button>
+    </div>
 
     <div class="row">
       <span class="label">1 second</span>
@@ -70,6 +143,8 @@
       <span class="label">1 day</span>
       <span class="value" id="day"></span>
     </div>
+
+    <div class="footer">Dynamic time value relative to exam horizon</div>
   </div>
 
   <script>
@@ -98,31 +173,32 @@
     function updateTimeValue() {
       const now = new Date();
 
-      const remaining = (EXAM_2026 - now) / 1000; // seconds
+      const remaining = (EXAM_2026 - now) / 1000;
       const penalty = (EXAM_2027 - EXAM_2026) / 1000;
 
       if (remaining <= 0) return;
 
       const TVR = (remaining + penalty) / remaining;
 
-      document.getElementById("sec").textContent =
-        formatDuration(1 * TVR);
-
-      document.getElementById("tenMin").textContent =
-        formatDuration(600 * TVR);
-
-      document.getElementById("hour").textContent =
-        formatDuration(3600 * TVR);
-
-      document.getElementById("halfDay").textContent =
-        formatDuration(43200 * TVR);
-
-      document.getElementById("day").textContent =
-        formatDuration(86400 * TVR);
+      document.getElementById("sec").textContent = formatDuration(1 * TVR);
+      document.getElementById("tenMin").textContent = formatDuration(600 * TVR);
+      document.getElementById("hour").textContent = formatDuration(3600 * TVR);
+      document.getElementById("halfDay").textContent = formatDuration(43200 * TVR);
+      document.getElementById("day").textContent = formatDuration(86400 * TVR);
     }
 
+    // Theme toggle
+    const toggle = document.getElementById("themeToggle");
+    toggle.addEventListener("click", () => {
+      const body = document.body;
+      const isDark = body.getAttribute("data-theme") === "dark";
+
+      body.setAttribute("data-theme", isDark ? "light" : "dark");
+      toggle.textContent = isDark ? "Dark" : "Light";
+    });
+
     updateTimeValue();
-    setInterval(updateTimeValue, 60000); // update every minute
+    setInterval(updateTimeValue, 60000);
   </script>
 </body>
 </html>
