--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@
   const EXAM_2026 = new Date(Date.UTC(2026, 4, 2, 24, 0, 0));
   const EXAM_2027 = new Date(Date.UTC(2027, 4, 2, 24, 0, 0));
 
+  let cachedTVR = null;
+
   function formatDuration(seconds) {
-    seconds = Math.max(0, seconds);
-
-    if (seconds < 60) {
-      return seconds.toFixed(2) + "s";
-    }
-
-    seconds = Math.ceil(seconds);
+    seconds = Math.max(0, Math.ceil(seconds));
 
     const days = Math.floor(seconds / 86400);
     seconds %= 86400;
     const hours = Math.floor(seconds / 3600);
     seconds %= 3600;
     const minutes = Math.floor(seconds / 60);
+    const secs = seconds % 60;
 
     if (days > 0) return `${days}d ${hours}h`;
     if (hours > 0) return `${hours}h ${minutes}m`;
-    return `${minutes}m`;
+    if (minutes > 0) return `${minutes}m ${secs}s`;
+    return `${secs}s`;
   }
 
-  function updateTimeValue() {
+  function computeTVR() {
     const now = new Date();
     const remaining = (EXAM_2026 - now) / 1000;
     const penalty = (EXAM_2027 - EXAM_2026) / 1000;
@@ -32,30 +30,41 @@
       document.querySelectorAll(".value").forEach(el => {
         el.textContent = "Exam passed";
       });
-      return;
+      return null;
     }
 
-    const TVR = (remaining + penalty) / remaining;
-
-    /* 🔴 LIVE TICK COMPONENT (0 → 1 every second) */
-    const liveTick = (Date.now() % 1000) / 1000;
-
-    document.getElementById("sec").textContent =
-      formatDuration(TVR + liveTick);
-
-    document.getElementById("tenMin").textContent =
-      formatDuration(600 * TVR);
-
-    document.getElementById("hour").textContent =
-      formatDuration(3600 * TVR);
-
-    document.getElementById("halfDay").textContent =
-      formatDuration(43200 * TVR);
-
-    document.getElementById("day").textContent =
-      formatDuration(86400 * TVR);
+    return (remaining + penalty) / remaining;
   }
 
-  updateTimeValue();
-  setInterval(updateTimeValue, 100); // 🔴 smooth live feel
+  /* 🔁 Update heavy math once per second */
+  function updateTVR() {
+    cachedTVR = computeTVR();
+  }
+
+  /* 🔴 Smooth visual ticker (milliseconds) */
+  function updateDisplay() {
+    if (!cachedTVR) return;
+
+    const msFraction = (Date.now() % 1000) / 1000;
+
+    // 🔴 Seconds visibly move
+    document.getElementById("sec").textContent =
+      (cachedTVR + msFraction).toFixed(2) + "s";
+
+    // Other values stay stable & meaningful
+    document.getElementById("tenMin").textContent =
+      formatDuration(600 * cachedTVR);
+    document.getElementById("hour").textContent =
+      formatDuration(3600 * cachedTVR);
+    document.getElementById("halfDay").textContent =
+      formatDuration(43200 * cachedTVR);
+    document.getElementById("day").textContent =
+      formatDuration(86400 * cachedTVR);
+  }
+
+  updateTVR();
+  updateDisplay();
+
+  setInterval(updateTVR, 1000);      // math
+  setInterval(updateDisplay, 50);    // smooth visual tick
 </script>
