--- a/index.html
+++ b/index.html
@@ -1,158 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Time Value Awareness</title>
+<meta charset="UTF-8" />
+<title>Time Value Awareness — Live</title>
 
-  <style>
+<style>
+  :root {
+    --bg: #ffffff;
+    --card: rgba(0,0,0,0.03);
+    --border: rgba(0,0,0,0.08);
+    --text: #111;
+    --muted: rgba(0,0,0,0.55);
+    --accent: #3b82f6;
+  }
+
+  @media (prefers-color-scheme: dark) {
     :root {
-      --bg: #ffffff;
-      --card: rgba(0, 0, 0, 0.03);
-      --border: rgba(0, 0, 0, 0.08);
-      --text: #111111;
-      --muted: rgba(0, 0, 0, 0.55);
+      --bg: #0f1115;
+      --card: rgba(255,255,255,0.03);
+      --border: rgba(255,255,255,0.06);
+      --text: #e8e8e8;
+      --muted: rgba(255,255,255,0.6);
     }
+  }
 
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg: #0f1115;
-        --card: rgba(255, 255, 255, 0.03);
-        --border: rgba(255, 255, 255, 0.06);
-        --text: #e8e8e8;
-        --muted: rgba(255, 255, 255, 0.6);
-      }
-    }
+  body {
+    margin: 0;
+    padding: 14px;
+    background: var(--bg);
+    color: var(--text);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Inter, sans-serif;
+  }
 
-    body {
-      margin: 0;
-      padding: 14px;
-      background: var(--bg);
-      color: var(--text);
-      font-family: -apple-system, BlinkMacSystemFont, Inter, system-ui, sans-serif;
-    }
+  .container {
+    max-width: 320px;
+    border-radius: 14px;
+    padding: 14px 16px;
+    background: var(--card);
+    box-shadow: 0 0 0 1px var(--border);
+  }
 
-    .container {
-      max-width: 320px;
-      border-radius: 12px;
-      padding: 14px 16px;
-      background: var(--card);
-      box-shadow: 0 0 0 1px var(--border);
-    }
+  .title {
+    font-size: 13px;
+    opacity: .7;
+    margin-bottom: 10px;
+  }
 
-    .title {
-      font-size: 13px;
-      font-weight: 500;
-      opacity: 0.7;
-      margin-bottom: 10px;
-    }
+  .row {
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 0;
+    font-size: 13px;
+  }
 
-    .row {
-      display: flex;
-      justify-content: space-between;
-      padding: 6px 0;
-      font-size: 13px;
-    }
+  .row + .row {
+    border-top: 1px solid var(--border);
+  }
 
-    .row + .row {
-      border-top: 1px solid var(--border);
-    }
+  .label { color: var(--muted); }
+  .value { font-variant-numeric: tabular-nums; }
 
-    .label {
-      color: var(--muted);
-    }
+  /* 🔴 Heartbeat pulse */
+  .pulse {
+    animation: pulse 1s infinite;
+  }
 
-    .value {
-      font-variant-numeric: tabular-nums;
-    }
+  @keyframes pulse {
+    0%   { opacity: 1; }
+    50%  { opacity: .6; }
+    100% { opacity: 1; }
+  }
 
-    .primary {
-      font-size: 14px;
-      font-weight: 500;
-    }
-  </style>
+  /* 📊 Sparkline */
+  canvas {
+    margin-top: 8px;
+    width: 100%;
+    height: 40px;
+    opacity: .85;
+  }
+</style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="title">Current Time Value</div>
+<div class="container">
+  <div class="title">Current Time Value (Live)</div>
 
-    <div class="row">
-      <span class="label">1 second</span>
-      <span class="value" id="sec">—</span>
-    </div>
-
-    <div class="row">
-      <span class="label">10 minutes</span>
-      <span class="value" id="tenMin">—</span>
-    </div>
-
-    <div class="row primary">
-      <span class="label">1 hour</span>
-      <span class="value" id="hour">—</span>
-    </div>
-
-    <div class="row">
-      <span class="label">12 hours</span>
-      <span class="value" id="halfDay">—</span>
-    </div>
-
-    <div class="row">
-      <span class="label">1 day</span>
-      <span class="value" id="day">—</span>
-    </div>
+  <div class="row">
+    <span class="label">1 second</span>
+    <span class="value pulse" id="sec">—</span>
+  </div>
+  <div class="row">
+    <span class="label">10 minutes</span>
+    <span class="value" id="tenMin">—</span>
+  </div>
+  <div class="row">
+    <span class="label">1 hour</span>
+    <span class="value" id="hour">—</span>
+  </div>
+  <div class="row">
+    <span class="label">12 hours</span>
+    <span class="value" id="halfDay">—</span>
+  </div>
+  <div class="row">
+    <span class="label">1 day</span>
+    <span class="value" id="day">—</span>
   </div>
 
-  <script>
-    /* ===== EXAM DATES (IST-safe) ===== */
-    // May 3, 2026 – 05:30 IST
-    const EXAM_2026 = new Date(Date.UTC(2026, 4, 2, 24, 0, 0));
-    // May 2, 2027 – 05:30 IST
-    const EXAM_2027 = new Date(Date.UTC(2027, 4, 2, 24, 0, 0));
+  <canvas id="spark"></canvas>
+</div>
 
-    function formatDuration(seconds) {
-      seconds = Math.max(0, Math.round(seconds));
+<script>
+/* ===== EXAM DATES (IST-safe) ===== */
+const EXAM_2026 = new Date(Date.UTC(2026, 4, 2, 24, 0, 0));
+const EXAM_2027 = new Date(Date.UTC(2027, 4, 2, 24, 0, 0));
 
-      const days = Math.floor(seconds / 86400);
-      seconds %= 86400;
-      const hours = Math.floor(seconds / 3600);
-      seconds %= 3600;
-      const minutes = Math.floor(seconds / 60);
-      const secs = seconds % 60;
+let TVR = 0;
+let history = [];
 
-      if (days > 0) return `${days}d ${hours}h`;
-      if (hours > 0) return `${hours}h ${minutes}m`;
-      if (minutes > 0) return `${minutes}m ${secs}s`;
-      return `${secs}s`;
-    }
+const canvas = document.getElementById("spark");
+const ctx = canvas.getContext("2d");
 
-    function updateTimeValue() {
-      const now = new Date();
-      const remaining = (EXAM_2026 - now) / 1000;
-      const penalty = (EXAM_2027 - EXAM_2026) / 1000;
+function format(seconds) {
+  seconds = Math.ceil(seconds);
+  if (seconds < 60) return seconds.toFixed(2) + "s";
 
-      if (!isFinite(remaining) || remaining <= 0) {
-        document.querySelectorAll(".value").forEach(el => {
-          el.textContent = "Exam passed";
-        });
-        return;
-      }
+  const d = Math.floor(seconds / 86400);
+  seconds %= 86400;
+  const h = Math.floor(seconds / 3600);
+  seconds %= 3600;
+  const m = Math.floor(seconds / 60);
 
-      const TVR = (remaining + penalty) / remaining;
+  if (d) return `${d}d ${h}h`;
+  if (h) return `${h}h ${m}m`;
+  return `${m}m`;
+}
 
-      document.getElementById("sec").textContent =
-        formatDuration(1 * TVR);
-      document.getElementById("tenMin").textContent =
-        formatDuration(600 * TVR);
-      document.getElementById("hour").textContent =
-        formatDuration(3600 * TVR);
-      document.getElementById("halfDay").textContent =
-        formatDuration(43200 * TVR);
-      document.getElementById("day").textContent =
-        formatDuration(86400 * TVR);
-    }
+/* 🔁 Compute TVR once per second */
+function computeTVR() {
+  const now = new Date();
+  const remaining = (EXAM_2026 - now) / 1000;
+  const penalty = (EXAM_2027 - EXAM_2026) / 1000;
 
-    updateTimeValue();
-    setInterval(updateTimeValue, 60000);
-  </script>
+  if (remaining <= 0) return null;
+  return (remaining + penalty) / remaining;
+}
+
+/* 🎨 Urgency color ramp */
+function urgencyColor(tvr) {
+  if (tvr < 2) return "#3b82f6";      // calm blue
+  if (tvr < 4) return "#f59e0b";      // amber
+  return "#ef4444";                  // red
+}
+
+/* 📊 Draw sparkline */
+function drawSparkline() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  if (history.length < 2) return;
+
+  const max = Math.max(...history);
+  const min = Math.min(...history);
+
+  ctx.beginPath();
+  history.forEach((v, i) => {
+    const x = (i / (history.length - 1)) * canvas.width;
+    const y = canvas.height - ((v - min) / (max - min)) * canvas.height;
+    if (i === 0) ctx.moveTo(x, y);
+    else ctx.lineTo(x, y);
+  });
+
+  ctx.strokeStyle = urgencyColor(TVR);
+  ctx.lineWidth = 2;
+  ctx.stroke();
+}
+
+/* 🔴 Smooth display loop */
+function render() {
+  const liveFrac = (Date.now() % 1000) / 1000;
+
+  document.getElementById("sec").textContent =
+    (TVR + liveFrac).toFixed(2) + "s";
+
+  document.getElementById("tenMin").textContent = format(600 * TVR);
+  document.getElementById("hour").textContent   = format(3600 * TVR);
+  document.getElementById("halfDay").textContent= format(43200 * TVR);
+  document.getElementById("day").textContent    = format(86400 * TVR);
+
+  document.querySelectorAll(".value").forEach(v => {
+    v.style.color = urgencyColor(TVR);
+  });
+}
+
+/* 🚀 Timers */
+setInterval(() => {
+  const t = computeTVR();
+  if (!t) return;
+  TVR = t;
+  history.push(TVR);
+  if (history.length > 60) history.shift();
+  drawSparkline();
+}, 1000);
+
+setInterval(render, 50);
+</script>
 </body>
 </html>
