--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background: var(live--);
+    background: var(--live);
     animation: livePulse 1.2s ease-in-out infinite;
   }
 
